fix: faq spacing md responsive

--- a/css/style.css
+++ b/css/style.css
@@ -11591,9 +11591,19 @@ ul.children {
 .progress-area .elementor-container .skill-progress-wrapper .elementor-container {
   gap: 236px;
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .progress-area .elementor-container .skill-progress-wrapper .elementor-container {
+    gap: 12px;
+  }
+}
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .progress-area .elementor-container .skill-progress-wrapper .elementor-container {
     gap: 24px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .progress-area .elementor-container .skill-progress-wrapper .elementor-container .elementor-col-50 {
+    width: unset;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
